updated small screen font and image sizes

--- a/about.html
+++ b/about.html
@@ -24,36 +24,23 @@
 			</nav>
 		</div>
 		
-		<div class="aside"><b>Mage Hand Spell</b>
-			<p>Conjure a spectral, floating hand that'll manipulate objects so you don't have to!</p>
+		<div class="aside">
+			<img class="center" src="images/ryan.jpg" alt="portrait of ryan dugan" width="500px">
 		</div>
 		
 		<div class="heading">
-			<h1><b>Welcome to the world of Dungeons and Dragons!</b> <i>Learn the basics of D&amp;D here.</i></h1> 
+			<h1><b>About Me</b></h1> 
 		</div>
 		<div class="aside2">
-			<h2 align="center">Latest Update</h2>
-			<p><b>Behind the Dungeon Master Screen</b></p>
-			<p>Blog entry that provides a brief overview before diving into what it means to take on the roll of Dungeon Master.</p>
+			<img class="center" src="images/gameplay1.jpg">
 		</div>
 		<div class="main">
-		<div class="intro">
-			<p><b>Dungeons and Dragons</b> made simple.</p>
-			<p>Here you'll find: 
-				<ul>
-					<li><b>Blogs</b> that explain basic mechanics and an introductory overview of the hobby.</li>
-					<li><b>Crafting</b> that allows you to build your own character utilizing the <a href="https://www.dndbeyond.com/sources/basic-rules">Basic Rules</a>.</li>
-					<li><b>Podcasts</b> that expand upon each Blog entry with discussion points and reader input.</li>
-					<li><b>Resources</b> that are helpful to Players and Dungeon Masters new and old! From tutorial videos to content generators, there's always something more to uncover!</li>
-				</ul>
-			</p>
-			<hr>
-			<p>Check out the <i>Handbooker Helper</i> starter video series presented by popular D&amp;D gaming group, <i>Critical Role</i>.</p>
-		</div>
-		<div class="container-youtube">
-			<iframe class="responsive-iframe" src="https://www.youtube.com/embed/videoseries?list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN" width=""></iframe>
-		<!--	<iframe allowfullscreen="" height="266" src="https://www.youtube.com/embed/videoseries?list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN" width="320" youtube-src-id="hD-LWHhiseE"></iframe> -->
-		</div>
+		
+			<p>My name is Ryan Dugan and I’m from San Antonio, TX.</p>
+			<p>Through Simply DnD I invite you to explore the world of <a href="https://dnd.wizards.com/">Dungeons and Dragons</a> where I’ll be providing inclusive tutorials and informative content that’ll get you started playing in no time.</p>
+			<p>It’s been over 6 years since I was first invited to play D&amp;D with a friend. Ever since then I’ve been invested in this role-playing game’s ever-growing community. Throughout the years I’ve donned the role of both Player and Dungeon Master. While I continue to learn and develop new ways to play, I’ve accumulated a solid foundation of knowledge and experience that I’d like to share with you.</p>
+			<p>My quest is to simply equip you with introductory understanding and the tools you need to begin your first adventure! You can only have one first adventure so why not make it a marvelous one?</p>
+			
 		</div>
 		<div class="footer">
 			<nav>
