--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		</div>
 		<div class="aside2">
 			<h2 align="center">Latest Update</h2>
-			<p><b>Behind the Dungeon Master Screen</b></p>
-			<p>Blog entry that provides a brief overview before diving into what it means to take on the roll of Dungeon Master.</p>
+			<p><b>Tools of the Trade (Dungeon Master Edition)</b></p>
+			<p>Blog entry that provides a list of handy tools that DMs can use to maintain and enhance the game.</p>
 		</div>
 		<div class="main">
 		<div class="intro">
