added contact page

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="contact.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/bso0acc.css">
-<title>About</title>
+<title>Contact</title>
 </head>
 
 <body>
@@ -29,17 +29,16 @@
 		</div>
 		
 		<div class="heading">
-			<h1><b>About Me</b></h1> 
+			<h1><b>Contact Me</b></h1> 
 		</div>
-		<div class="aside2">
-			<img class="center" src="images/gameplay1.jpg">
-		</div>
+	<!--	<div class="aside2">
+			
+		</div> -->
 		<div class="main">
 		
-			<p>My name is Ryan Dugan and I’m from San Antonio, TX.</p>
-			<p>Through Simply DnD I invite you to explore the world of <a href="https://dnd.wizards.com/">Dungeons and Dragons</a> where I’ll be providing inclusive tutorials and informative content that’ll get you started playing in no time.</p>
-			<p>It’s been over 6 years since I was first invited to play D&amp;D with a friend. Ever since then I’ve been invested in this role-playing game’s ever-growing community. Throughout the years I’ve donned the role of both Player and Dungeon Master. While I continue to learn and develop new ways to play, I’ve accumulated a solid foundation of knowledge and experience that I’d like to share with you.</p>
-			<p>My quest is to simply equip you with introductory understanding and the tools you need to begin your first adventure! You can only have one first adventure so why not make it a marvelous one?</p>
+			<p>Should you have any questions or concerns, feel free to contact me at <a href="mailto:simplydndquest@gmail.com">simplydndquest@gmail.com</a></p>
+			<p><img class="right" src="images/youtube.png" alt="youtube icon" width="50px"> Simply DnD YouTube</p>
+			<p><img class="right" src="images/twitter.png" alt="twitter icon" width="50px"> Simply DnD Twitter</p>
 			
 		</div>
 		<div class="footer">
@@ -51,8 +50,8 @@
 					<img class="socials" src="images/twitter.png" alt="twitter icon" width="50px" height="50px">
 				</a>
 				<ul style="float:right">
-					<li><a class="active" href="about.html"><b>About</b></a></li>
-					<li><a href="#"><b>Contact</b></a></li>
+					<li><a href="about.html"><b>About</b></a></li>
+					<li><a class="active" href="contact.html"><b>Contact</b></a></li>
 				</ul>
 			</nav>
 		</div>	
