added href contact

--- a/blog.growth.of.dnd.html
+++ b/blog.growth.of.dnd.html
@@ -120,7 +120,7 @@
 				</a>
 				<ul style="float:right">
 					<li><a href="about.html"><b>About</b></a></li>
-					<li><a href="#"><b>Contact</b></a></li>
+					<li><a href="contact.html"><b>Contact</b></a></li>
 				</ul>
 			</nav>
 		</div>	
