--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 				</a>
 				<ul style="float:right">
 					<li><a class="active" href="about.html"><b>About</b></a></li>
-					<li><a href="#"><b>Contact</b></a></li>
+					<li><a href="contact.html"><b>Contact</b></a></li>
 				</ul>
 			</nav>
 		</div>	
