--- a/blog.simple.dnd.overview.html
+++ b/blog.simple.dnd.overview.html
@@ -18,7 +18,7 @@
 					<li><a href="index.html"><b>Home</b></a></li>
 					<li><a class="active" href="blog.html"><b>Blog</b></a></li>
 					<li><a href="#"><b>Craft</b></a></li>
-					<li><a href="#"><b>Podcast</b></a></li>
+					<li><a href="podcast.html"><b>Podcast</b></a></li>
 					<li><a href="#"><b>Resources</b></a></li>
 				</ul>
 			</nav>
