--- a/podcast.html
+++ b/podcast.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="blogmenu.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/bso0acc.css">
-<title>Blogs</title>
+<title>Podcast</title>
 </head>
 
 <body>
@@ -16,40 +16,40 @@
 			<nav>
 				<ul>
 					<li><a href="index.html"><b>Home</b></a></li>
-					<li><a class="active" href="blog.html"><b>Blog</b></a></li>
+					<li><a href="blog.html"><b>Blog</b></a></li>
 					<li><a href="#"><b>Craft</b></a></li>
-					<li><a href="podcast.html"><b>Podcast</b></a></li>
+					<li><a class="active" href="podcast.html"><b>Podcast</b></a></li>
 					<li><a href="#"><b>Resources</b></a></li>
 				</ul>
 			</nav>
 		</div>
 		
 		<div class="heading">
-			<div class="thumbnail"><a href="blog.quest.html"><img src="images/dicepile.png" alt="pile of dice" width="150" height="auto"></a></div>
+			<div class="thumbnail"><a href="www.youtube.com"><img src="images/blog.yt.png" alt="pile of dice" width="150" height="auto"></a></div>
 			<div class="title"><h1><b>The Quest for Simply DnD <br></b>August 24, 2020</h1></div>
 			<div class="excerpt"><b>Dungeons and Dragons is a passion of mine.</b> It's a collaborative story-telling experience between friends new and old that's balanced within a unique mechanical system. This tabletop role-playing game has begun to increase in popularity in recent years. Simply DnD will investigate the resurgence of this once exclusive and underground hobby and shed light upon its purpose, functionality, and system.</div>
 		</div>
 
 		<div class="heading2">
-			<div class="thumbnail"><a href="blog.simple.dnd.overview.html"><img src="images/books.thumb.png" alt="assortment of dnd books" width="150" height="auto"></a></div>
+			<div class="thumbnail"><a href="www.youtube.com"><img src="images/blog.yt.png" alt="assortment of dnd books" width="150" height="auto"></a></div>
 			<div class="title"><h1><b>A Simple D&amp;D Overview</b><br>September 04, 2020</h1></div>
 			<div class="excerpt"><b>What is Dungeons &amp; Dragons?</b> Simply, it is your story to tell. You are the protagonist. It’s a journey that you co-create with friends. It’s your favorite book you can’t seem to put down, “just one more page,” you remind yourself. It’s your favorite movie keeping you on the edge-of-your-seat as you wonder, “what in the world will happen next?”</div>	
 		</div>
 		
 		<div class="heading3">
-			<div class="thumbnail"><a href="blog.growth.of.dnd.html"><img src="images/wizards.thumb.png" alt="wizards of the coast and tsr logos" width="150" height="auto"></a></div>
+			<div class="thumbnail"><a href="www.youtube.com"><img src="images/blog.yt.png" alt="wizards of the coast and tsr logos" width="150" height="auto"></a></div>
 			<div class="title"><h1><b>The Growth of D&amp;D</b><br>September 13, 2020</h1></div>
 			<div class="excerpt"><b>Beginnings &amp; Businesses.</b> Emerging from the minds of Gary Gygax and Dave Arneson, D&amp;D was published by TSR (Tactical Studies Rules) alongside Don Kaye in 1973. In 1990 the company was purchased by Magic the Gathering creator Wizards of the Coast, as it remains today. In 1999 Wizards of the Coast was acquired by Hasbro, providing a greater distribution of miniatures and further promoting this collaborative dice-rolling-hobby. D&amp;D ultimately discovered success, but its journey wasn’t without darker days.</div>	
 		</div>
 		
 		<div class="heading4">
-			<div class="thumbnail"><a href="blog.tools.players.html"><img src="images/tools.thumb.png" alt="digital dice rolling app on phone and physical dice" width="150" height="auto"></a></div>
+			<div class="thumbnail"><a href="www.youtube.com"><img src="images/blog.yt.png" alt="digital dice rolling app on phone and physical dice" width="150" height="auto"></a></div>
 			<div class="title"><h1><b>Tools of the Trade (Players)</b><br>September 20, 2020</h1></div>
 			<div class="excerpt"><b>What Do You Need to Play D&amp;D?</b> D&amp;D's essential tools are available through various formats. All material listed below possess physical or digital options. You decide what works best for you! The Dungeon Master (DM) and Player Character (PC) use similar tools, however, the DM’s toolbox is a bit more extensive since they facilitate the game. Let's focus on player materials as most newcomers start out there.</div>
 		</div>		
 		
 		<div class="heading5">
-			<div class="thumbnail"><a href="https://simplydnd.blogspot.com/"><img src="images/chest.thumb.png" alt="red glass vials and dice inside a small wooden chest" width="150" height="auto"></a></div>
+			<div class="thumbnail"><a href="www.youtube.com"><img src="images/blog.yt.png" alt="red glass vials and dice inside a small wooden chest" width="150" height="auto"></a></div>
 			<div class="title"><h1><b>The Full Simply DnD Blog</b><br>Sept 27 - Nov 29, 2020</h1></div>
 			<div class="excerpt white"><b>Check out the rest of the blogs here!</b> Currently in the process of shifting content to this site.<p>Until then, follow the link here to read the rest of the blogs!</p></div>
 		</div>
