--- a/podcast.html
+++ b/podcast.html
@@ -50,8 +50,8 @@
 		
 		<div class="heading5">
 			<div class="thumbnail"><a href="www.youtube.com"><img src="images/blog.yt.png" alt="red glass vials and dice inside a small wooden chest" width="150" height="auto"></a></div>
-			<div class="title"><h1><b>The Full Simply DnD Blog</b><br>Sept 27 - Nov 29, 2020</h1></div>
-			<div class="excerpt white"><b>Check out the rest of the blogs here!</b> Currently in the process of shifting content to this site.<p>Until then, follow the link here to read the rest of the blogs!</p></div>
+			<div class="title"><h1><b>More Coming Soon</b><br></h1></div>
+			<div class="excerpt white"><b>We're working on recording more episodes for you to enjoy!</b> Check back soon!<p>Make sure to sign up for YouTube notifications so you can know exactly when a new episode airs!</p></div>
 		</div>
 		<div class="footer">
 			<nav>
