starting resources page

--- a/podcast.html
+++ b/podcast.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="blogmenu.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/bso0acc.css">
-<title>Podcast</title>
+<title>Podcasts</title>
 </head>
 
 <body>
@@ -17,9 +17,9 @@
 				<ul>
 					<li><a href="index.html"><b>Home</b></a></li>
 					<li><a href="blog.html"><b>Blog</b></a></li>
-					<li><a href="#"><b>Craft</b></a></li>
+					<li><a href="craft.html"><b>Craft</b></a></li>
 					<li><a class="active" href="podcast.html"><b>Podcast</b></a></li>
-					<li><a href="#"><b>Resources</b></a></li>
+					<li><a href="resources.html"><b>Resources</b></a></li>
 				</ul>
 			</nav>
 		</div>
