--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
 				<ul>
 					<li><a href="index.html"><b>Home</b></a></li>
 					<li><a href="blog.html"><b>Blog</b></a></li>
-					<li><a href="#"><b>Craft</b></a></li>
+					<li><a href="craft.html"><b>Craft</b></a></li>
 					<li><a href="podcast.html"><b>Podcast</b></a></li>
-					<li><a href="#"><b>Resources</b></a></li>
+					<li><a href="resources.html"><b>Resources</b></a></li>
 				</ul>
 			</nav>
 		</div>
