--- a/resources.html
+++ b/resources.html
@@ -36,6 +36,14 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam consequuntur facilis a.</p>
 		</div>
 		
+		<div class="section2">
+			<h1><p>USEFUL TOOLS</p></h2>
+		</div>
+		
+		<div class="main2">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
+		</div>
+		
 		<div class="footer">
 			<nav>
 				<a href="https://youtube.com">
