updated resources css

--- a/resources.html
+++ b/resources.html
@@ -36,14 +36,29 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam consequuntur facilis a.</p>
 		</div>
 		
-		<div class="section2">
-			<h1><p>USEFUL TOOLS</p></h2>
-		</div>
-		
 		<div class="main2">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
 		</div>
 		
+		<div class="main3">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
+		</div>
+		
+		<div class="section2">
+			<h2><p>USEFUL TOOLS</p></h2>
+		</div>
+		
+		<div class="main4">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
+		</div>
+		
+		<div class="main5">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
+		</div>
+		
+		<div class="main6">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
+		</div>		
 		<div class="footer">
 			<nav>
 				<a href="https://youtube.com">
