updated resources css

--- a/resources.html
+++ b/resources.html
@@ -33,6 +33,7 @@
 		</div>
 
 		<div class="main">
+			<div class="container-youtube"><iframe width="560" height="315" src="https://www.youtube.com/embed/hD-LWHhiseE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam consequuntur facilis a.</p>
 		</div>
 		
