--- a/resources.html
+++ b/resources.html
@@ -38,6 +38,7 @@
 		</div>
 		
 		<div class="main2">
+			<div class="container-youtube"><iframe width="560" height="315" src="https://www.youtube.com/embed/NFlmgBZrLCo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
 		</div>
 		
