updates resources page

--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
 			<hr>
 			<p>Check out the <i>Handbooker Helper</i> starter video series presented by popular D&amp;D gaming group, <i>Critical Role</i>.</p>
 		</div>
-		<div class="container-youtube">
-			<iframe class="responsive-iframe" src="https://www.youtube.com/embed/videoseries?list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN" width=""></iframe>
-		<!--	<iframe allowfullscreen="" height="266" src="https://www.youtube.com/embed/videoseries?list=PL1tiwbzkOjQyr6-gqJ8r29j_rJkR49uDN" width="320" youtube-src-id="hD-LWHhiseE"></iframe> -->
-		</div>
+		
+			<div class="container-youtube"><iframe width="560" height="315" src="https://www.youtube.com/embed/hD-LWHhiseE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+		
 		</div>
 		<div class="footer">
 			<nav>
