--- a/resources.html
+++ b/resources.html
@@ -34,17 +34,17 @@
 
 		<div class="main">
 			<div class="container-youtube"><iframe width="560" height="315" src="https://www.youtube.com/embed/hD-LWHhiseE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam consequuntur facilis a.</p>
+			<p><b>Handbooker Helper</b><br>Excellent starter series for new Players and Dungeon Masters!</p>
 		</div>
 		
 		<div class="main2">
 			<div class="container-youtube"><iframe width="560" height="315" src="https://www.youtube.com/embed/NFlmgBZrLCo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
+			<p><b>Dungeon Master Lessons</b><br>A new Dungeon Master shares a list of experiences she's taken note of in this video blog.</p>
 		</div>
 		
 		<div class="main3">
 			<div class="container-youtube"><iframe width="560" height="315" src="https://www.youtube.com/embed/MFCzwiqlnCE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
+			<p><b>The Basics</b><br>An experienced Dungeon Master and Player explains how the game is played.</p>
 		</div>
 		
 		<div class="section2">
@@ -52,7 +52,8 @@
 		</div>
 		
 		<div class="main4">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
+			
+			<p><a href="https://www.dndbeyond.com/"><img class="float" src="images/dndbeyond.png" alt="dndbeyond logo"></a><b>DND Beyond</b><br><br>This is a useful tool for both Players and DMs! It provides all official D&D content in a digital format. The sourcebooks, adventure modules, character sheets, and monster stats are all available here.</p>
 		</div>
 		
 		<div class="main5">
