--- a/resources.html
+++ b/resources.html
@@ -53,7 +53,7 @@
 		
 		<div class="main4">
 			
-			<p><a href="https://www.dndbeyond.com/"><img class="float" src="images/dndbeyond.png" alt="dndbeyond logo"></a><a href="https://www.dndbeyond.com/"></a>DND Beyond</a><br><br>This is a useful tool for both Players and DMs! It provides all official D&amp;D content in a digital format. The sourcebooks, adventure modules, character sheets, and monster stats are all available here.</p>
+			<p><a href="https://www.dndbeyond.com/"><img class="float" src="images/dndbeyond.png" alt="dndbeyond logo"></a><a href="https://www.dndbeyond.com/">DND Beyond</a><br><br>This is a useful tool for both Players and DMs! It provides all official D&amp;D content in a digital format. The sourcebooks, adventure modules, character sheets, and monster stats are all available here.</p>
 		</div>
 		
 		<div class="main5">
@@ -61,7 +61,7 @@
 		</div>
 		
 		<div class="main6">
-			<p><a href="https://www.fantasynamegenerators.com/"><img class="float" src="images/fng.png"</a><a href="https://www.fantasynamegenerators.com">Fantasy Name Generators</a><br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
+			<p><a href="https://www.fantasynamegenerators.com/"><img class="float" src="images/fng.png" alt="fantasy name generators logo"></a><a href="https://www.fantasynamegenerators.com">Fantasy Name Generators</a><br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
 		</div>		
 		<div class="footer">
 			<nav>
