--- a/resources.html
+++ b/resources.html
@@ -15,11 +15,11 @@
 		<div class="navbar">
 			<nav>
 				<ul>
-					<li><a class="active" href="index.html"><b>Home</b></a></li>
+					<li><a href="index.html"><b>Home</b></a></li>
 					<li><a href="blog.html"><b>Blog</b></a></li>
 					<li><a href="craft.html"><b>Craft</b></a></li>
 					<li><a href="podcast.html"><b>Podcast</b></a></li>
-					<li><a href="resources.html"><b>Resources</b></a></li>
+					<li><a class="active" href="resources.html"><b>Resources</b></a></li>
 				</ul>
 			</nav>
 		</div>
