updated craft page

--- a/craft.html
+++ b/craft.html
@@ -1,10 +1,61 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="craft.css" type="text/css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/bso0acc.css">
 <title>Crafting Your Character</title>
 </head>
 
 <body>
+	
+	<img src="images/logo.png" alt="simply dnd logo" id="logo" href="index.html">
+	
+	<div class="container">
+		<div class="navbar">
+			<nav>
+				<ul>
+					<li><a href="index.html"><b>Home</b></a></li>
+					<li><a href="blog.html"><b>Blog</b></a></li>
+					<li><a class="active" href="craft.html"><b>Craft</b></a></li>
+					<li><a href="podcast.html"><b>Podcast</b></a></li>
+					<li><a href="resources.html"><b>Resources</b></a></li>
+				</ul>
+			</nav>
+		</div>
+		
+		<div class="heading">
+			<h1><b>Craft a Character!</b><i> Select from a variety of features, abilities, traits, backgrounds, and more.</i></h1> 
+		
+		</div>
+		
+		<div class="main">
+			<p><b><span class="firstcharacter">D</span>ungeons and Dragons is a passion of mine.</b> It's a collaborative story-telling experience between friends new and old that's balanced within a unique mechanical system. This tabletop role-playing game has begun to increase in popularity in recent years. Simply DnD will investigate the resurgence of this once exclusive and underground hobby and shed light upon its purpose, functionality, and system. Simply DnD should effectively introduce anyone interested in the hobby to what it is that makes this game tick and how to participate in its community. D&amp;D need not be confusing or exclusive. Simply DnD will convey this hobby’s quest to join people across the spectrum of experience by keeping things simple.</p>
+		
+			<img class="center500" src="blog images/dice3cover.png" alt="pile of colorful dice">
+		
+			<p class="center">Dice can be <i>critical</i> to your success!</p>
+			
+			<h1>Next Up: <a href="blog.simple.dnd.overview.html">A Simple D&amp;D Overview</a></h1>
+			
+			<p><i>You can follow <a href="https://twitter.com/SimplyDnD">Simply D&amp;D</a> on Twitter: @SimplyDnD</i></p>
+			
+		</div>
+		
+		<div class="footer">
+			<nav>
+				<a href="https://youtube.com">
+					<img class="socials" src="images/youtube.png" alt="youtube icon" width="50px" height="50px">
+				</a>
+				<a href="https://twitter.com/SimplyDnD">
+					<img class="socials" src="images/twitter.png" alt="twitter icon" width="50px" height="50px">
+				</a>
+				<ul style="float:right">
+					<li><a href="about.html"><b>About</b></a></li>
+					<li><a href="contact.html"><b>Contact</b></a></li>
+				</ul>
+			</nav>
+		</div>	
+	</div>
 </body>
 </html>
