--- a/craft.html
+++ b/craft.html
@@ -30,16 +30,9 @@
 		</div>
 		
 		<div class="main">
-			<p><b><span class="firstcharacter">D</span>ungeons and Dragons is a passion of mine.</b> It's a collaborative story-telling experience between friends new and old that's balanced within a unique mechanical system. This tabletop role-playing game has begun to increase in popularity in recent years. Simply DnD will investigate the resurgence of this once exclusive and underground hobby and shed light upon its purpose, functionality, and system. Simply DnD should effectively introduce anyone interested in the hobby to what it is that makes this game tick and how to participate in its community. D&amp;D need not be confusing or exclusive. Simply DnD will convey this hobby’s quest to join people across the spectrum of experience by keeping things simple.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A perferendis dolores repellendus.</p>
 		
-			<img class="center500" src="blog images/dice3cover.png" alt="pile of colorful dice">
-		
-			<p class="center">Dice can be <i>critical</i> to your success!</p>
-			
-			<h1>Next Up: <a href="blog.simple.dnd.overview.html">A Simple D&amp;D Overview</a></h1>
-			
-			<p><i>You can follow <a href="https://twitter.com/SimplyDnD">Simply D&amp;D</a> on Twitter: @SimplyDnD</i></p>
-			
+
 		</div>
 		
 		<div class="footer">
