--- a/craft.html
+++ b/craft.html
@@ -30,8 +30,25 @@
 		</div>
 		
 		<div class="main">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A perferendis dolores repellendus.</p>
-		
+
+			<form>
+			<div class="section"><b>Discover your Race</b><br>
+			Select One. Click <em>learn more</em> to understand each option further.</div>	<br>
+				
+				<input type="radio" id="dwarf" name="race" value="dwarf">
+				<label for="dwarf"><b>Dwarves</b> are short and brawny people known for mining valuable metals and battling with such ferocity that even the tallest foes shrink back. <a href="#">Learn More!</a></label>
+				<br><br>		
+				<input type="radio" id="elf" name="race" value="elf">
+				<label for="elf"><b>Elves</b> are graceful and wanderlust people known for their enchanting magics and intrinsic attunement with nature who may appear arrogant but are willing to aid those in need. <a href="#">Learn More!</a></label>
+				<br><br>		
+				<input type="radio" id="halfling" name="race" value="halfling">
+				<label for="halfling"><b>Halflings</b> are small and jovial people known for their simplistic way of life and working well within any community—they’re also swift and stealthy should such an occasion present itself. <a href="#">Learn More!</a></label>			
+			
+			
+			
+			
+			
+			</form>
 
 		</div>
 		
