--- a/craft.html
+++ b/craft.html
@@ -74,28 +74,40 @@
 				<div class="section"><b>Discover your Class</b><br>
 				Select One. Click <em>learn more</em> to understand each option further.</div>	<br>	
 				
+				<img src="images/barbarian.png" alt="barbarian">
 				<input type="radio" id="barbarian" name="class" value="barbarian">
-				<label for="barbarian"><b>Barbarians</b> are fiece warriors of primitive background who can enter a battle rage.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Barbarian"> Learn More!</a></label><br><br>					
+				<label for="barbarian"><b>Barbarians</b> are fiece warriors of primitive background who can enter a battle rage.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Barbarian"> Learn More!</a></label><br><br>	
+				<img src="images/bard.png" alt="bard">
 				<input type="radio" id="bard" name="class" value="bard">
-				<label for="bard"><b>Bards</b> are inspiring magicians whose powers echo the music of creation.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Bard"> Learn More!</a></label><br><br>				
+				<label for="bard"><b>Bards</b> are inspiring magicians whose powers echo the music of creation.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Bard"> Learn More!</a></label><br><br>	
+				<img src="images/cleric.png" alt="cleric">
 				<input type="radio" id="cleric" name="class" value="cleric">
-				<label for="cleric"><b>Clerics</b> are priestly champions who wield divine magic in service of a higher power.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Cleric"> Learn More!</a></label><br><br>				
+				<label for="cleric"><b>Clerics</b> are priestly champions who wield divine magic in service of a higher power.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Cleric"> Learn More!</a></label><br><br>
+				<img src="images/druid.png" alt="druid">
 				<input type="radio" id="druid" name="class" value="druid">
-				<label for="druid"><b>Druids</b> are priests of the Old Faith, wielding the powers of nature - moonlight and plant growth, fire and lightning - and adopting animal forms.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Druid"> Learn More!</a></label><br><br>					
+				<label for="druid"><b>Druids</b> are priests of the Old Faith, wielding the powers of nature - moonlight and plant growth, fire and lightning - and adopting animal forms.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Druid"> Learn More!</a></label><br><br>
+				<img src="images/fighter.png" alt="fighter">
 				<input type="radio" id="fighter" name="class" value="fighter">
-				<label for="fighter"><b>Fighters</b> are masters of martial combat, skilled with a variety of weapons and armor.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Fighter"> Learn More!</a></label><br><br>					
+				<label for="fighter"><b>Fighters</b> are masters of martial combat, skilled with a variety of weapons and armor.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Fighter"> Learn More!</a></label><br><br>	
+				<img src="images/monk.png" alt="monk">
 				<input type="radio" id="monk" name="class" value="monk">
-				<label for="monk"><b>Monks</b> are masters of martial arts, harnessing the power of the body in pursuit of physical and spiritual perfection.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Monk"> Learn More!</a></label><br><br>				
+				<label for="monk"><b>Monks</b> are masters of martial arts, harnessing the power of the body in pursuit of physical and spiritual perfection.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Monk"> Learn More!</a></label><br><br>	
+				<img src="images/paladin.png" alt="paladin">
 				<input type="radio" id="paladin" name="class" value="paladin">
-				<label for="paladin"><b>Paladins</b> are holy warriors bound to a sacred oath.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Paladin"> Learn More!</a></label><br><br>					
+				<label for="paladin"><b>Paladins</b> are holy warriors bound to a sacred oath.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Paladin"> Learn More!</a></label><br><br>	
+				<img src="images/ranger.png" alt="ranger">
 				<input type="radio" id="ranger" name="class" value="ranger">
-				<label for="ranger"><b>Rangers</b> are warriors who use martial prowess and nature magic to combat threats on the edges of civilization.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Ranger"> Learn More!</a></label><br><br>					
+				<label for="ranger"><b>Rangers</b> are warriors who use martial prowess and nature magic to combat threats on the edges of civilization.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Ranger"> Learn More!</a></label><br><br>		
+				<img src="images/rogue.png" alt="rogue">
 				<input type="radio" id="rogue" name="class" value="rogue">
-				<label for="rogue"><b>Rogues</b> are scoundrels who use stealth and trickery to overcome obstacles and enemies.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Rogue"> Learn More!</a></label><br><br>					
+				<label for="rogue"><b>Rogues</b> are scoundrels who use stealth and trickery to overcome obstacles and enemies.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Rogue"> Learn More!</a></label><br><br>	
+				<img src="images/sorcerer.png" alt="sorcerer">
 				<input type="radio" id="sorcerer" name="class" value="sorcerer">
 				<label for="sorcerer"><b>Sorcerers</b> are spellcasters who draw on inherent magic from a gift or bloodline.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Sorcerer"> Learn More!</a></label><br><br>
+				<img src="images/warlock.png" alt="warlock">
 				<input type="radio" id="warlock" name="class" value="warlock">
-				<label for="warlock"><b>Warlocks</b> are wielders of magic that is derived from a bargain with an extraplanar entity.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Warlock"> Learn More!</a></label><br><br>				
+				<label for="warlock"><b>Warlocks</b> are wielders of magic that is derived from a bargain with an extraplanar entity.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Warlock"> Learn More!</a></label><br><br>	
+				<img src="images/wizard.png" alt="wizard">
 				<input type="radio" id="wizard" name="class" value="wizard">
 				<label for="wizard"><b>Wizards</b> are scholarly magic-users capable of manipulating the structures of reality.<a href="https://www.dndbeyond.com/sources/basic-rules/classes#Wizard"> Learn More!</a></label><br><br>	
 				
