update search bar on all pages

--- a/craft.html
+++ b/craft.html
@@ -20,6 +20,12 @@
 					<li><a class="active" href="craft.html"><b>Craft</b></a></li>
 					<li><a href="podcast.html"><b>Podcast</b></a></li>
 					<li><a href="resources.html"><b>Resources</b></a></li>
+					<div class="search-container">
+						<form action="/action_page.php">
+							<input type="text" placeholder="Search..." name="search">
+							<button type="submit">Submit</button>
+						</form>
+					</div>				
 				</ul>
 			</nav>
 		</div>
