--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="main.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/bso0acc.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="jquery-3.5.1.min.js"></script>
 <title>Simply DnD</title>
 </head>
 
@@ -21,7 +23,7 @@
 					<li><a href="podcast.html"><b>Podcast</b></a></li>
 					<li><a href="resources.html"><b>Resources</b></a></li>
 					<div class="search-container">
-						<form action="/action_page.php">
+						<form action="images/mag.glass.png">
 							<input type="text" placeholder="Search..." name="search">
 							<button type="submit">Submit</button>
 						</form>
