--- a/resources.html
+++ b/resources.html
@@ -21,7 +21,7 @@
 					<li><a href="podcast.html"><b>Podcast</b></a></li>
 					<li><a class="active" href="resources.html"><b>Resources</b></a></li>
 					<div class="search-container">
-						<form action="/action_page.php">
+						<form action="images/mag.glass.png">
 							<input type="text" placeholder="Search..." name="search">
 							<button type="submit">Submit</button>
 						</form>
