--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,10 @@
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="blogmenu.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/bso0acc.css">
-<title>Blogs</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="jquery-3.5.1.min.js"></script>
+	
+<title>Simply DnD Blogs</title>
 </head>
 
 <body>
