--- a/resources.html
+++ b/resources.html
@@ -67,7 +67,7 @@
 		</div>
 		
 		<div class="main6">
-			<p><a href="https://www.fantasynamegenerators.com/"><img class="float" src="images/fng.png" alt="fantasy name generators logo"></a><a href="https://www.fantasynamegenerators.com">Fantasy Name Generators</a><br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dignissimos odit quaerat optio.</p>
+			<p><a href="https://www.fantasynamegenerators.com/"><img class="float" src="images/fng.png" alt="fantasy name generators logo"></a><a href="https://www.fantasynamegenerators.com">Fantasy Name Generators</a><br><br>This will help inspire and provide names for both your expected and unexpected characters! The <a href="https://play.google.com/store/apps/details?id=com.crystalpeak.fantasynamegenerator&hl=en_US&gl=US">FaNG mobile app</a> is also a great reference tool.</p>
 		</div>		
 		<div class="footer">
 			<nav>
