--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://use.typekit.net/bso0acc.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="jquery-3.5.1.min.js"></script>
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
@@ -49,8 +50,8 @@
 			</nav>
 		</div>
 		
-		<div class="aside"><b>Mage Hand Spell</b>
-			<p>Conjure a spectral, floating hand that'll manipulate objects so you don't have to!</p>
+		<div class="aside"><h2>Mage Hand</h2>
+			<p>Conjure a spectral, floating hand that'll manipulate objects so you don't have to!<br><br><a href="https://twitter.com/SimplyDnD">#spelloftheday</a></p>
 		</div>
 		
 		<div class="heading">
