--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 			<p>My name is Ryan Dugan and I’m from San Antonio, TX.</p>
 			<p>Through Simply DnD I invite you to explore the world of <a href="https://dnd.wizards.com/">Dungeons and Dragons</a> where I’ll be providing inclusive tutorials and informative content that’ll get you started playing in no time.</p>
 			<p>It’s been over 6 years since I was first invited to play D&amp;D with a friend. Ever since then I’ve been invested in this role-playing game’s ever-growing community. Throughout the years I’ve donned the role of both Player and Dungeon Master. While I continue to learn and develop new ways to play, I’ve accumulated a solid foundation of knowledge and experience that I’d like to share with you.</p>
-			<p>My quest is to simply equip you with introductory understanding and the tools you need to begin your first adventure! You can only have one first adventure so why not make it a marvelous one?</p>
+			<p>My quest is to simply equip you with an introductory understanding and the tools you need to begin your first adventure! You can only have one first adventure so why not make it a marvelous one?</p>
 			
 		</div>
 		<div class="footer">
