--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,8 @@
 		<div class="main">
 		
 			<p>Should you have any questions or concerns, feel free to contact me at <a href="mailto:simplydndquest@gmail.com">simplydndquest@gmail.com</a></p>
-			<p><img class="" src="images/youtube.png" alt="youtube icon" width="50px"> <a href="www.youtube.com"> Simply DnD YouTube</a></p>
-			<p><img class="" src="images/twitter.png" alt="twitter icon" width="50px"> <a href="www.twitter.com/simplydnd">Simply DnD Twitter</a></p>
+			<p><img class="" src="images/youtube.png" alt="youtube icon" width="50px"> <a href="https://youtube.com/"> Simply DnD YouTube</a></p>
+			<p><img class="" src="images/twitter.png" alt="twitter icon" width="50px"> <a href="https://twitter.com/SimplyDnD">Simply DnD Twitter</a></p>
 			
 		</div>
 		<div class="footer">
